@@ -3,10 +3,12 @@
 use strict;
 use Test::More;
 use Data::Dumper;
-use Gtk2 -init;
+use Gtk2;
 
 if (2 > (Gtk2->get_version_info)[1]) {
 	plan (skip_all => "GtkClipboard didn't exist in 2.0.x");
+} elsif (not Gtk2->init_check) {
+	plan (skip_all => 'no display, nothing to test');
 } else {
 	plan (tests => 22);
 }
