@@ -1,8 +1,12 @@
 
-use Test::More tests => 17;
-use_ok ('Gtk2');
+use Test::More;
+use Gtk2;
 
-Gtk2->init;
+if (Gtk2->init_check) {
+	plan tests => 16;
+} else {
+	plan skip_all => 'no display, nothing to test';
+}
 
 require './t/ignore_keyboard.pl';
 
